# controllers/userController.js
@@ -67,3 +67,16 @@ exports.updateMe = catchAsync(async (req, res, next) => {
 
 	res.json({ status: 'success', user });
 });
+
+exports.getUser = catchAsync(async (req, res, next) => {
+	const user = await User.findById(req.params.id).select('-email');
+
+	if (!user) {
+		return next(new AppError('User not found', 404));
+	}
+
+	res.status(200).json({
+		status: 'success',
+		data: user,
+	});
+});
